--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,43 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+#datetime-picker {
+  font-size: medium;
+  color: gray;
+  padding: 10px;
+  height: 35px;
+  border: 1px solid black;
+  border-radius: 3px;
+}
+
+[data-start] {
+  font-weight: 700;
+}
+
+.timer {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  width: 100px;
+  border: 1px solid black;
+  border-radius: 3px;
+}
+.value {
+  font-size: large;
+  font-weight: 700;
+}
+.label {
+  color: gray;
+}
